package ro.uaic.info.engine.exception;

public class EngineExceptionNoWindow extends Exception {
    public EngineExceptionNoWindow(){
        super("Attach Window to engine!");
    }
}
