package ro.uaic.info.game.objects;

import java.awt.*;
import java.awt.image.BufferedImage;

public class GameObject {
    private Rectangle mesh;
    private BufferedImage sprite;
}
