package ro.uaic.info.game.objects.weapon;

import java.awt.*;

public class Projectile {
    private ProjectileType projectileType;
    private Rectangle mesh;
    private Point coordinates;
    private Rectangle dimension;

    public void update() {

    }

    public void drag(Graphics graphics) {

    }

}

