package ro.uaic.info.game.objects.weapon;

public enum ProjectileType {
}
