@startuml

title __VLADIANAINVADERS's Class Diagram__\n

  namespace ro.uaic.info.configuration.basic {
    class ro.uaic.info.configuration.basic.BuildTest {
    }
  }
  

  namespace ro.uaic.info.configuration.tests {
    class ro.uaic.info.configuration.tests.EngineTest {
    }
  }
  

  namespace ro.uaic.info.engine {
    class ro.uaic.info.engine.Debug {
    }
  }
  

  namespace ro.uaic.info.engine {
    class ro.uaic.info.engine.Engine {
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace entity {
      class ro.uaic.info.engine.entity.GameObjects {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace exception {
      class ro.uaic.info.engine.exception.EngineExceptionNoWindow {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace exception {
      class ro.uaic.info.engine.exception.EngineExceptionUninitialized {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace object {
      interface ro.uaic.info.engine.object.GameObject {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace object {
      class ro.uaic.info.engine.object.Trigger {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace object {
      namespace transform {
        class ro.uaic.info.engine.object.transform.Transform {
        }
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace space {
      class ro.uaic.info.engine.space.Double3 {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace sprite {
      enum AssetList {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace sprite {
      class ro.uaic.info.engine.sprite.SpriteLoader {
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace window {
      class ro.uaic.info.engine.window.GameWindow {
      }
    }
  }
  

  namespace ro.uaic.info.game.objects.enemy {
    interface ro.uaic.info.game.objects.enemy.Enemy {
    }
  }
  

  namespace ro.uaic.info.game.objects.player {
    class ro.uaic.info.game.objects.player.Player {
    }
  }
  

  namespace ro.uaic.info.game.objects.player {
    class ro.uaic.info.game.objects.player.PlayerInputListener {
    }
  }
  

  namespace ro.uaic.info.game.objects.ship {
    class ro.uaic.info.game.objects.ship.Ship {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.ChainGunFirePattern {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.FiringPattern {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.Gun {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.LinearFiringPattern {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.ScatterShotFiringPattern {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    namespace projectile {
      class ro.uaic.info.game.objects.weapon.projectile.Projectile {
      }
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    namespace projectile {
      enum ProjectileType {
      }
    }
  }


  ro.uaic.info.engine.Debug o-- ro.uaic.info.engine.Debug.DebugLevel : debugLevel
  ro.uaic.info.engine.Engine o-- ro.uaic.info.engine.Debug : debugHandler
  ro.uaic.info.engine.Engine o-- ro.uaic.info.engine.entity.GameObjects : gameObjects
  ro.uaic.info.engine.Engine o-- ro.uaic.info.engine.window.GameWindow : window
  ro.uaic.info.engine.entity.GameObjects o-- ro.uaic.info.game.objects.player.Player : playerObject
  ro.uaic.info.engine.object.Trigger .up.|> ro.uaic.info.engine.object.GameObject
  ro.uaic.info.engine.object.Trigger o-- ro.uaic.info.engine.object.transform.Transform : transform
  ro.uaic.info.engine.object.transform.Transform o-- ro.uaic.info.engine.space.Double3 : location
  ro.uaic.info.engine.object.transform.Transform o-- ro.uaic.info.engine.space.Double3 : rotation
  ro.uaic.info.engine.object.transform.Transform o-- ro.uaic.info.engine.space.Double3 : scale
  ro.uaic.info.engine.object.transform.Transform o-- ro.uaic.info.engine.space.Double3 : velocity
  ro.uaic.info.engine.window.GameWindow -up-|> javax.swing.JFrame
  ro.uaic.info.engine.window.GameWindow o-- ro.uaic.info.engine.Engine : engine
  ro.uaic.info.game.objects.player.Player .up.|> ro.uaic.info.engine.object.GameObject
  ro.uaic.info.game.objects.player.Player o-- ro.uaic.info.game.objects.player.PlayerInputListener : listener
  ro.uaic.info.game.objects.player.Player o-- ro.uaic.info.game.objects.ship.Ship : ship
  ro.uaic.info.game.objects.player.Player o-- ro.uaic.info.engine.object.transform.Transform : transform
  ro.uaic.info.game.objects.player.PlayerInputListener .up.|> java.awt.event.KeyListener
  ro.uaic.info.game.objects.ship.Ship .up.|> ro.uaic.info.engine.object.GameObject
  ro.uaic.info.game.objects.ship.Ship o-- ro.uaic.info.engine.object.transform.Transform : transform
  ro.uaic.info.game.objects.weapon.Gun o-- ro.uaic.info.game.objects.weapon.pattern.FiringPattern : firingPattern
  ro.uaic.info.game.objects.weapon.Gun o-- ro.uaic.info.game.objects.weapon.projectile.ProjectileType : projectileType
  ro.uaic.info.game.objects.weapon.projectile.Projectile o-- ro.uaic.info.game.objects.weapon.projectile.ProjectileType : projectileType

@enduml
